StageSelectComponent: Bugfix - Shortcuts in Mobile - Fixed stacking behavior on narrower screens

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -452,8 +452,8 @@ a:visited {
 }
 
 .btn-secondary {
-  height: 2.5rem;
-  margin-right: 1rem;
+  min-height: 2.5rem;
+  margin: .5rem 1rem .5rem 0;
   padding: .75rem 1rem;
   border: none;
   background-color: hsl(218, 12%, 40%);
